fix bugs and align items left

--- a/css/main.css
+++ b/css/main.css
@@ -230,8 +230,8 @@ body, h1, p, a, ul, li, div {
 
 .about-outer {
   position: relative;
-  text-align: center;
-  margin: 30px 50px;
+  text-align: left;
+  margin: 10vh 10vw;
 }
 
 .about {
@@ -247,7 +247,6 @@ body, h1, p, a, ul, li, div {
   padding: 10px;
   cursor: pointer;
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 5vh;
 }
@@ -287,7 +286,7 @@ body, h1, p, a, ul, li, div {
 /*PROJECTS*/
 
 .project {
-  text-align: center;
+  text-align: left;
 }
 
 .project-main {
